test/Fail/MultipleFrontEnds.agda
-- Andreas, 2020-12-15, re PR #5020
-- Test error message "Must not specify multiple frontends"

-- See respective .flags file

-- Expected error:
-- Must not specify multiple frontends (--interaction, --interaction-json)
